--- a/package.json
+++ b/package.json
@@ -4,15 +4,20 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
+    "test": "jest",
+    "android": "react-native run-android",
+    "ios": "react-native run-ios"
   },
   "dependencies": {
     "@types/react-native-vector-icons": "^6.4.0",
+    "lottie-react-native": "^2.6.1",
     "react": "16.8.3",
     "react-native": "0.59.4",
     "react-native-extended-stylesheet": "^0.11.1",
     "react-native-router-flux": "^4.0.6",
-    "react-native-vector-icons": "^6.4.2"
+    "react-native-svg": "^9.3.7",
+    "react-native-vector-icons": "^6.4.2",
+    "react-native-waveview": "^1.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.3",
