--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -138,6 +138,8 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-track-player')
+    implementation project(':react-native-torch')
     implementation project(':lottie-react-native')
     implementation project(':react-native-svg')
     implementation project(':react-native-vector-icons')
