--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "react-native-extended-stylesheet": "^0.11.1",
     "react-native-router-flux": "^4.0.6",
     "react-native-svg": "^9.3.7",
+    "react-native-swift": "^1.2.2",
+    "react-native-torch": "^1.1.5",
+    "react-native-track-player": "^1.1.3",
     "react-native-vector-icons": "^6.4.2",
     "react-native-waveview": "^1.1.0"
   },
@@ -39,5 +42,6 @@
     "assets": [
       "resources/fonts"
     ]
-  }
+  },
+  "isSwift": true
 }
