--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "16.8.3",
     "react-native": "0.59.4",
     "react-native-extended-stylesheet": "^0.11.1",
+    "react-native-firebase": "^5.3.1",
     "react-native-router-flux": "^4.0.6",
     "react-native-svg": "^9.3.7",
     "react-native-swift": "^1.2.2",
