--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/react-native-vector-icons": "^6.4.0",
+    "@types/underscore": "^1.8.14",
     "lottie-react-native": "^2.6.1",
     "react": "16.8.3",
     "react-native": "0.59.4",
@@ -20,7 +21,8 @@
     "react-native-torch": "^1.1.5",
     "react-native-track-player": "^1.1.3",
     "react-native-vector-icons": "^6.4.2",
-    "react-native-waveview": "^1.1.0"
+    "react-native-waveview": "^1.1.0",
+    "underscore": "^1.9.1"
   },
   "devDependencies": {
     "@babel/core": "^7.4.3",
