--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -149,6 +149,7 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-push-notification')
     implementation(project(':react-native-firebase')) {
         transitive = false
     }
