--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "jest",
     "android": "react-native run-android",
     "ios": "react-native run-ios",
-    "build-linux":"cd android && ./gradlew assembleRelease && cd .."
+    "build":"cd android && ./gradlew assembleRelease && cd .."
   },
   "dependencies": {
     "@types/react-native-vector-icons": "^6.4.0",
