--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest",
     "android": "react-native run-android",
-    "ios": "react-native run-ios"
+    "ios": "react-native run-ios",
+    "build":"cd android && ./gradlew assembleRelease && cd .."
   },
   "dependencies": {
     "@types/react-native-vector-icons": "^6.4.0",
